# blog-project

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  conventions.md  idea.md  vision.md
.cursor/rules/: conventions.mdc  workflow.mdc
.sqlx/: query-2817e6297ab00aafa47e0a17e9ef780d05cbef0ebbd0c7eabdf6eb49dab164ac.json  query-e40e4ca8c9032024a8a8eafd0343c50eca8b0008a95707c7385ce5af60e481a2.json  query-ffde6e1549d50280c4e4e0cc5e519f64467913b0003c247a627669c124707e98.json
blog-cli/: Cargo.toml
blog-cli/src/: commands.rs  constants.rs  main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20251205151238_create_users.sql  20251205151239_create_posts.sql
blog-server/src/: application.rs  constants.rs  data.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs
blog-server/tests/: auth_integration_test.rs  posts_integration_test.rs
blog-server/tests/common/: mod.rs
blog-shared/: Cargo.toml
blog-shared/src/: auth.rs  constants.rs  lib.rs  post.rs  request.rs  user.rs
blog-wasm/: Cargo.toml  Trunk.toml  index.html  styles.css
blog-wasm/src/: api.rs  components.rs  constants.rs  lib.rs
blog-wasm/src/components/: header.rs  login_form.rs  post_card.rs  post_form.rs  post_list.rs  register_form.rs
doc/: tasklist.md  workflow.md
doc/lesson-3.2.7-exchange-grpc/: Cargo.toml  README.md  build.rs
doc/lesson-3.2.7-exchange-grpc/examples/: client_example.rs
doc/lesson-3.2.7-exchange-grpc/proto/: exchange.proto
doc/lesson-3.2.7-exchange-grpc/src/: client.rs  lib.rs  main.rs  server.rs
