[workspace]
resolver = "3"
members = [
    "blog-shared",
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP (server)
actix-web = "4"
actix-rt = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# gRPC
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
prost = "0.14.1"
tokio-stream = "0.1"

# Auth
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Build dependencies (shared)
tonic-prost-build = "0.14.2"

# Internal crates
blog-shared = { path = "blog-shared" }
blog-client = { path = "blog-client" }
