[package]
name = "blog-client"
version.workspace = true
edition.workspace = true

[dependencies]
blog-shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
