[package]
name = "blog-server"
version.workspace = true
edition.workspace = true

[dependencies]
blog-shared.workspace = true
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
