[package]
name = "blog-server"
version.workspace = true
edition.workspace = true

[dependencies]
blog-shared.workspace = true
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

[build-dependencies]
tonic-prost-build.workspace = true
