[package]
name = "blog-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blog-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "console"] }
