[package]
name = "exchange-grpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "exchange_grpc"
path = "src/lib.rs"

[[bin]]
name = "exchange_server"
path = "src/main.rs"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[dependencies]
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
tokio-stream = "0.1"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
